# controllers/usercontroller.go
@@ -19,31 +19,28 @@ import (
 func Login(c *gin.Context) {
 	var user models.User
 	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"msg": "model binding failed",
-		})
+		utils.NewError(c, http.StatusBadRequest, err)
+		return
 	}
 
 	if token, success := services.Login(user); success {
 		c.String(http.StatusOK, token)
 	} else {
-		utils.NewError(c, http.StatusUnauthorized, "login failed")
+		utils.NewError(c, http.StatusBadRequest, "username or password invalid")
 	}
 }
 
 // @summary 获取当前的用户信息
 // @Accept  json
 // @Produce json
-// @Success 200 {object} models.User
+// @Success 200 {object} models.CustomClaims
 // @Security ApiKeyAuth
 // @Router /user [get]
 func GetCurrentUser(c *gin.Context) {
 	a, _ := c.Get("currentUser")
 
 	if obj, success := a.(*models.CustomClaims); !success {
-		c.PureJSON(http.StatusOK, gin.H{
-			"msg": "认证成功但是无法获取当前用户",
-		})
+		utils.NewError(c, http.StatusNotFound, "user not found")
 	} else {
 		c.JSON(http.StatusOK, obj)
 	}
