# docs/swagger.json
@@ -56,7 +56,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.CustomClaims"
                         }
                     }
                 }
@@ -64,9 +64,24 @@
         }
     },
     "definitions": {
-        "models.User": {
+        "models.CustomClaims": {
             "type": "object",
             "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "password": {
                     "type": "string"
                 },
